--- a/html/css/main.css
+++ b/html/css/main.css
@@ -1,7 +1,3 @@
-* {
-	font-size: 14px;
-}
-
 body {
   background-color: grey;
 }
@@ -80,11 +76,14 @@ input::-webkit-calendar-picker-indicator {
 
 #log {
 	color: white;
-	background-color: #303030;
   width: 100%;
-  height: 100%;
   margin: 0px;
-  border: 1px solid white;
+  font-family: monospace;
+  font-size: 1em;
+}
+
+#log pre {
+ display: inline
 }
 
 #buttonbar {
