--- a/html/css/main.css
+++ b/html/css/main.css
@@ -3,6 +3,7 @@ body {
   height: 99%;
   padding: 0;
   margin: 0;
+  font-family: monospace;
 }
 
 .lm_content {
@@ -44,30 +45,6 @@ overflow-y:auto;
   width: 0%;
 }
 
-input::-webkit-calendar-picker-indicator {
-  display: none;/* remove default arrow */
-}
-
-.myarrow:after {
-    content: url(https://i.stack.imgur.com/i9WFO.png);
-    margin-left: -20px; 
-    padding: .1em;
-    pointer-events:none;
-}
-
-
-#panel {
-    width: 100%;
-    height: 100%;
-    display: table-row;
-}
-
-#panelrow {
-  display:table-cell;
-  height: 100%;
-}
-
-
 .CodeMirror {
   height: 99%;
 }
@@ -94,12 +71,10 @@ input::-webkit-calendar-picker-indicator {
   color: #bb0000;
 }
 
-#buttonbar {
-	margin: auto;
+#toolbar {
+	margin: 0;
+  padding: 3px;
 	display: block;
-	width: 90%;
-  margin-left: 3px;
-  padding-bottom: 3px;
 }
 
 #savebank {
@@ -124,15 +99,10 @@ input::-webkit-calendar-picker-indicator {
   vertical-align: middle;
 }
 
-#restartonsavelbl {
+label {
   display: inline;
   color: white;
-  background-color: black;
-  padding: 5px 0px 5px 6px;
-  margin: 0px;
-  margin-left: 0px;
-  margin-top: 4px;
-
+  font-size: 1em;
 }
 
 #loadfile {
@@ -147,30 +117,26 @@ input::-webkit-calendar-picker-indicator {
   padding-top: 4px;
 }
 
-#editorselect {
+#editorselectsection {
   display: inline;
+  border: 1px solid white;
+  padding: 3px;
+}
+
+#editorselect {
+  font-size: 0.8em;
+  border: 0;
   color: white;
   background-color: #404040;
-  border: 1px solid white;
-  padding: 5px 4px 5px 6px;
-  margin: 0px;
-  margin-left: 10px;
-  margin-top: 4px;
 }
 
-#editorselect select {
-  border: 0;
-    color: white;
-  background-color: #404040;
-  margin-top: 10px;
-}
-
-button {
+.button {
+  display: inline;
   color: white;
   background-color: black;
   border: 1px solid white;
-	padding: 5px;
-	margin: 3px 8px 3px 8px;
+  width: 100px;
+  padding: 3px;
 }
 
 @media only screen and (max-width: 1000px) {
