--- a/html/css/main.css
+++ b/html/css/main.css
@@ -142,6 +142,14 @@ label {
   padding-top: 4px;
 }
 
+#connectionstatus {
+  display: inline;
+  border: 1px solid white;
+  padding: 3px;
+  float: right;
+  color: white;
+}
+
 #editorselectsection {
   display: inline;
   border: 1px solid white;
