first draft of a patch library

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6,6 +6,14 @@ body {
   font-family: monospace;
 }
 
+#savetolibrary {
+  display: none;
+}
+
+#savetolibrary label {
+  color: black;
+}
+
 #confirmoverwrite {
   display: none;
 }
