implement deleting and the remaining dialogs for import and export

--- a/html/css/js-piano.css
+++ b/html/css/js-piano.css
@@ -45,4 +45,14 @@
   transform:scale(1.1);
 }
 
+#holdmode {
+  vertical-align: middle;
+}
 
+#holdmodesection {
+  position:fixed;
+}
+
+#spacer {
+  height: 26px;
+}
