--- a/html/css/datatables.css
+++ b/html/css/datatables.css
@@ -20,7 +20,7 @@ table.dataTable tfoot th {
 }
 table.dataTable thead th,
 table.dataTable thead td {
-  padding: 10px 18px;
+  padding: 5px 9px;
   border-bottom: 1px solid #111111;
 }
 table.dataTable thead th:active,
@@ -58,7 +58,7 @@ table.dataTable thead .sorting_desc_disabled {
   background-image: url("../images/sort_desc_disabled.png");
 }
 table.dataTable tbody tr {
-  background-color: #b3afaf;
+  background-color: #7e7777;
 }
 table.dataTable tbody tr.selected {
   background-color: #b0bed9;
