implemented asking for behaviour on control parameter matches

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -62,6 +62,12 @@ body {
 #confirmconcurrentmod {
   display: none;
 }
+
+#controlparametersmatch {
+  display: none;
+}
+
+
 .lm_content {
 overflow-x:auto;
 overflow-y:auto;
